rsolid/src/snapshots/rsolid__path__tests__catmull_rom_test.snap
---
source: rsolid/src/path.rs
expression: scad
---
function _v0() = [[0,5],[0.0009394285714285715,5.107990714285715],[0.003744,5.217639999999999],[0.008393142857142858,5.328892142857142],[0.014866285714285716,5.441691428571429],[0.02314285714285715,5.555982142857142],[0.03320228571428571,5.671708571428571],[0.04502400000000001,5.788815],[0.05858742857142858,5.907245714285715],[0.07387200000000001,6.026945],[0.09085714285714289,6.147857142857143],[0.10952228571428571,6.26992642857143],[0.12984685714285712,6.393097142857143],[0.15181028571428573,6.517313571428573],[0.17539200000000005,6.642519999999999],[0.20057142857142857,6.768660714285714],[0.227328,6.89568],[0.2556411428571429,7.023522142857143],[0.2854902857142857,7.152131428571431],[0.3168548571428572,7.281452142857145],[0.34971428571428576,7.411428571428573],[0.38404799999999994,7.5420050000000005],[0.4198354285714286,7.673125714285716],[0.4570560000000001,7.804735],[0.49568914285714283,7.936777142857144],[0.5357142857142857,8.069196428571429],[0.5771108571428573,8.201937142857144],[0.6198582857142858,8.334943571428571],[0.6639360000000001,8.468160000000001],[0.7093234285714285,8.601530714285715],[0.756,8.734999999999998],[0.8039451428571429,8.868512142857142],[0.8531382857142857,9.002011428571429],[0.9035588571428572,9.135442142857142],[0.9551862857142859,9.26874857142857],[1.0079999999999998,9.401874999999999],[1.0619794285714286,9.534765714285715],[1.1171039999999999,9.667365],[1.1733531428571429,9.799617142857144],[1.2307062857142859,9.93146642857143],[1.2891428571428576,10.062857142857144],[1.3486422857142857,10.193733571428574],[1.409184,10.32404],[1.4707474285714286,10.453720714285716],[1.5333120000000002,10.582720000000002],[1.5968571428571432,10.710982142857144],[1.661362285714286,10.838451428571428],[1.726806857142857,10.965072142857144],[1.7931702857142857,11.090788571428572],[1.8604319999999999,11.215544999999999],[1.9285714285714286,11.339285714285715],[1.997568,11.461955000000001],[2.0674011428571433,11.583497142857144],[2.138050285714286,11.703856428571429],[2.2094948571428574,11.822977142857143],[2.281714285714286,11.940803571428571],[2.3546880000000003,12.05728],[2.428395428571428,12.172350714285713],[2.502816,12.285960000000001],[2.5779291428571427,12.398052142857143],[2.653714285714286,12.508571428571429],[2.730150857142857,12.617462142857143],[2.8072182857142858,12.724668571428571],[2.8848960000000003,12.830135],[2.963163428571429,12.933805714285715],[3.0420000000000003,13.035625],[3.121385142857143,13.135537142857144],[3.2012982857142864,13.233486428571432],[3.2817188571428577,13.329417142857146],[3.3626262857142857,13.42327357142857],[3.443999999999999,13.514999999999997],[3.5258194285714284,13.604540714285715],[3.6080639999999997,13.69184],[3.6907131428571427,13.776842142857141],[3.7737462857142856,13.85949142857143],[3.857142857142857,13.939732142857142],[3.9408822857142862,14.017508571428571],[4.024944,14.092765],[4.109307428571428,14.165445714285713],[4.193952000000001,14.235495000000002],[4.278857142857143,14.302857142857142],[4.364002285714287,14.36747642857143],[4.449366857142857,14.429297142857141],[4.534930285714285,14.488263571428572],[4.620671999999999,14.544319999999999],[4.7065714285714275,14.597410714285713],[4.7926079999999995,14.64748],[4.878761142857144,14.694472142857144],[4.9650102857142855,14.738331428571428],[5.051334857142857,14.779002142857143],[5.137714285714286,14.816428571428574],[5.224128,14.850555],[5.310555428571429,14.881325714285712],[5.396976,14.908685],[5.483369142857143,14.932577142857143],[5.569714285714285,14.95294642857143],[5.655990857142857,14.969737142857143],[5.742178285714286,14.982893571428573],[5.828256,14.99236],[5.914203428571429,14.998080714285713],[6,15],[6.085796571428571,14.998080714285713],[6.1717439999999995,14.99236],[6.257821714285714,14.982893571428571],[6.344009142857142,14.969737142857142],[6.430285714285714,14.952946428571428],[6.516630857142856,14.93257714285714],[6.603023999999999,14.908684999999998],[6.689444571428572,14.881325714285715],[6.775872000000001,14.850555],[6.862285714285714,14.816428571428574],[6.948665142857143,14.779002142857143],[7.034989714285714,14.738331428571428],[7.121238857142859,14.694472142857144],[7.2073920000000005,14.64748],[7.293428571428571,14.597410714285713],[7.379327999999999,14.544319999999997],[7.465069714285714,14.48826357142857],[7.550633142857144,14.429297142857145],[7.6359977142857165,14.367476428571432],[7.721142857142859,14.302857142857146],[7.8060480000000005,14.235495],[7.890692571428572,14.165445714285717],[7.975056,14.092765000000002],[8.059117714285716,14.017508571428571],[8.142857142857142,13.939732142857142],[8.226253714285715,13.85949142857143],[8.309286857142856,13.776842142857141],[8.391936000000001,13.69184],[8.47418057142857,13.604540714285715],[8.556,13.514999999999999],[8.637373714285713,13.42327357142857],[8.718281142857142,13.329417142857142],[8.798701714285713,13.233486428571426],[8.878614857142857,13.135537142857139],[8.958,13.035625],[9.036836571428571,12.933805714285715],[9.115104,12.830135],[9.192781714285715,12.724668571428571],[9.269849142857144,12.617462142857143],[9.346285714285717,12.508571428571429],[9.422070857142858,12.398052142857145],[9.497184,12.285960000000005],[9.571604571428573,12.172350714285715],[9.645312,12.057280000000002],[9.718285714285717,11.940803571428573],[9.790505142857144,11.822977142857143],[9.861949714285714,11.703856428571429],[9.932598857142859,11.583497142857144],[10.002432,11.461955000000001],[10.071428571428571,11.339285714285715],[10.139568,11.215544999999999],[10.206829714285716,11.090788571428572],[10.273193142857142,10.965072142857142],[10.338637714285714,10.838451428571426],[10.403142857142857,10.710982142857143],[10.466688000000001,10.58272],[10.529252571428572,10.453720714285716],[10.590816,10.32404],[10.651357714285712,10.193733571428572],[10.710857142857144,10.062857142857144],[10.769293714285714,9.93146642857143],[10.826646857142858,9.799617142857143],[10.882896,9.667365],[10.938020571428572,9.534765714285715],[10.992,9.401874999999999],[11.044813714285716,9.268748571428572],[11.096441142857143,9.135442142857144],[11.146861714285716,9.002011428571429],[11.196054857142858,8.868512142857144],[11.244,8.735],[11.290676571428573,8.601530714285715],[11.336064,8.468160000000001],[11.380141714285713,8.334943571428571],[11.422889142857143,8.201937142857144],[11.464285714285715,8.069196428571429],[11.504310857142858,7.936777142857143],[11.542943999999999,7.804734999999999],[11.580164571428572,7.673125714285714],[11.615952000000004,7.5420050000000005],[11.650285714285715,7.411428571428571],[11.683145142857144,7.281452142857143],[11.714509714285713,7.152131428571429],[11.744358857142856,7.023522142857144],[11.772672,6.8956800000000005],[11.799428571428571,6.768660714285714],[11.824608,6.64252],[11.848189714285716,6.517313571428572],[11.870153142857143,6.393097142857143],[11.890477714285714,6.269926428571429],[11.909142857142857,6.147857142857143],[11.926128,6.0269449999999996],[11.941412571428572,5.907245714285713],[11.954976,5.788815],[11.966797714285715,5.671708571428572],[11.976857142857144,5.555982142857143],[11.985133714285714,5.4416914285714295],[11.991606857142857,5.328892142857144],[11.996255999999999,5.217639999999999],[11.99906057142857,5.107990714285714],[12,5],[11.999060571428572,4.893499285714285],[11.996255999999997,4.788279999999999],[11.991606857142855,4.684337857142857],[11.985133714285714,4.581668571428572],[11.976857142857142,4.480267857142857],[11.966797714285713,4.380131428571428],[11.954975999999998,4.281255],[11.941412571428573,4.183634285714286],[11.926128000000002,4.087265],[11.909142857142859,3.9921428571428574],[11.890477714285716,3.8982635714285716],[11.870153142857141,3.8056228571428568],[11.848189714285715,3.714216428571429],[11.824608,3.6240399999999995],[11.79942857142857,3.5350892857142853],[11.772671999999996,3.4473599999999993],[11.744358857142855,3.360847857142857],[11.714509714285715,3.2755485714285717],[11.683145142857148,3.191457857142858],[11.650285714285717,3.108571428571429],[11.615952000000004,3.0268850000000005],[11.580164571428574,2.9463942857142857],[11.542944,2.867095],[11.504310857142857,2.7889828571428574],[11.464285714285715,2.712053571428571],[11.422889142857143,2.636302857142857],[11.380141714285712,2.5617264285714283],[11.336064,2.48832],[11.29067657142857,2.4160792857142854],[11.243999999999998,2.3449999999999993],[11.196054857142856,2.2750778571428567],[11.146861714285713,2.206308571428571],[11.096441142857142,2.1386878571428563],[11.044813714285713,2.0722114285714275],[10.991999999999999,2.0068750000000004],[10.938020571428572,1.9426742857142858],[10.882896,1.8796049999999997],[10.826646857142858,1.817662857142857],[10.769293714285714,1.756843571428571],[10.710857142857144,1.697142857142857],[10.651357714285714,1.638556428571429],[10.590816000000002,1.5810800000000005],[10.529252571428575,1.524709285714286],[10.466688000000001,1.46944],[10.403142857142859,1.4152678571428574],[10.338637714285715,1.3621885714285715],[10.273193142857144,1.3101978571428572],[10.206829714285714,1.2592914285714287],[10.139568,1.2094649999999998],[10.071428571428571,1.1607142857142856],[10.002432,1.1130349999999996],[9.932598857142857,1.066422857142857],[9.861949714285714,1.020873571428571],[9.790505142857143,0.9763828571428569],[9.718285714285715,0.9329464285714282],[9.645312,0.8905599999999997],[9.571604571428573,0.8492192857142857],[9.497184,0.8089200000000001],[9.422070857142858,0.7696578571428572],[9.346285714285713,0.7314285714285715],[9.269849142857144,0.6942278571428571],[9.192781714285715,0.6580514285714285],[9.115104,0.6228949999999999],[9.036836571428573,0.5887542857142856],[8.958,0.5556249999999998],[8.878614857142857,0.523502857142857],[8.798701714285716,0.4923835714285712],[8.718281142857142,0.4622628571428569],[8.637373714285715,0.43313642857142864],[8.556000000000001,0.4050000000000001],[8.474180571428573,0.3778492857142857],[8.391936000000001,0.35168],[8.309286857142856,0.3264878571428571],[8.226253714285715,0.30226857142857144],[8.142857142857142,0.2790178571428571],[8.059117714285714,0.2567314285714285],[7.9750559999999995,0.23540499999999992],[7.890692571428572,0.21503428571428562],[7.8060480000000005,0.19561499999999993],[7.7211428571428575,0.17714285714285702],[7.635997714285715,0.1596135714285713],[7.5506331428571425,0.1430228571428572],[7.465069714285715,0.1273664285714286],[7.379328,0.11264000000000003],[7.293428571428571,0.09883928571428571],[7.207392,0.08595999999999998],[7.121238857142858,0.07399785714285714],[7.0349897142857145,0.06294857142857141],[6.948665142857143,0.05280785714285713],[6.862285714285715,0.04357142857142854],[6.775872,0.03523499999999997],[6.689444571428571,0.02779428571428568],[6.603024,0.021244999999999965],[6.516630857142857,0.015582857142857167],[6.430285714285715,0.010803571428571445],[6.344009142857143,0.006902857142857153],[6.257821714285715,0.0038764285714285775],[6.1717439999999995,0.0017200000000000028],[6.085796571428571,0.000429285714285715],[6,0],[5.914203428571429,0.00042928571428571424],[5.828256,0.0017199999999999997],[5.742178285714286,0.0038764285714285706],[5.655990857142856,0.006902857142857141],[5.569714285714285,0.010803571428571428],[5.483369142857142,0.015582857142857138],[5.396975999999999,0.021244999999999997],[5.31055542857143,0.027794285714285712],[5.224128000000001,0.035234999999999995],[5.137714285714287,0.04357142857142858],[5.051334857142857,0.05280785714285713],[4.9650102857142855,0.06294857142857141],[4.878761142857143,0.07399785714285714],[4.7926079999999995,0.08596000000000001],[4.7065714285714275,0.0988392857142857],[4.620671999999999,0.11263999999999999],[4.534930285714285,0.12736642857142857],[4.4493668571428575,0.14302285714285712],[4.364002285714287,0.1596135714285714],[4.278857142857144,0.17714285714285716],[4.193952000000001,0.19561499999999993],[4.109307428571428,0.21503428571428568],[4.024944,0.23540499999999998],[3.9408822857142862,0.25673142857142855],[3.857142857142857,0.2790178571428571],[3.773746285714285,0.30226857142857144],[3.6907131428571427,0.3264878571428571],[3.6080639999999997,0.35168],[3.5258194285714284,0.3778492857142856],[3.443999999999999,0.40499999999999997],[3.3626262857142852,0.4331364285714285],[3.281718857142857,0.4622628571428571],[3.2012982857142847,0.49238357142857136],[3.1213851428571417,0.5235028571428572],[3.0420000000000003,0.5556249999999998],[2.963163428571429,0.5887542857142856],[2.8848960000000003,0.6228949999999998],[2.8072182857142858,0.6580514285714285],[2.730150857142857,0.6942278571428571],[2.653714285714286,0.7314285714285715],[2.577929142857143,0.769657857142857],[2.502816000000001,0.8089199999999999],[2.428395428571429,0.8492192857142855],[2.3546880000000003,0.8905599999999999],[2.281714285714286,0.9329464285714286],[2.2094948571428574,0.9763828571428571],[2.1380502857142862,1.020873571428571],[2.0674011428571433,1.066422857142857],[1.997568,1.1130349999999998],[1.9285714285714286,1.1607142857142856],[1.8604319999999999,1.2094649999999998],[1.7931702857142857,1.2592914285714287],[1.726806857142857,1.3101978571428572],[1.6613622857142853,1.3621885714285713],[1.5968571428571425,1.4152678571428572],[1.5333119999999996,1.46944],[1.4707474285714288,1.5247092857142854],[1.4091840000000002,1.5810799999999996],[1.348642285714286,1.6385564285714282],[1.2891428571428576,1.697142857142857],[1.2307062857142859,1.756843571428571],[1.1733531428571429,1.817662857142857],[1.1171039999999999,1.8796049999999997],[1.0619794285714286,1.9426742857142858],[1.0079999999999998,2.0068750000000004],[0.9551862857142855,2.0722114285714284],[0.9035588571428569,2.1386878571428576],[0.8531382857142854,2.206308571428572],[0.8039451428571431,2.2750778571428567],[0.7560000000000001,2.3449999999999993],[0.7093234285714287,2.416079285714286],[0.6639360000000001,2.48832],[0.6198582857142858,2.5617264285714283],[0.5771108571428571,2.636302857142857],[0.5357142857142857,2.712053571428571],[0.49568914285714283,2.7889828571428574],[0.4570559999999999,2.867095],[0.4198354285714285,2.9463942857142857],[0.3840479999999999,3.0268850000000005],[0.3497142857142856,3.108571428571429],[0.316854857142857,3.191457857142858],[0.28549028571428586,3.275548571428571],[0.25564114285714296,3.360847857142857],[0.2273280000000001,3.4473599999999993],[0.20057142857142865,3.5350892857142853],[0.17539200000000002,3.6240399999999995],[0.15181028571428573,3.714216428571429],[0.12984685714285712,3.8056228571428568],[0.1095222857142857,3.8982635714285716],[0.0908571428571428,3.9921428571428574],[0.07387199999999994,4.087265],[0.05858742857142851,4.183634285714286],[0.04502399999999994,4.281255],[0.033202285714285774,4.380131428571428],[0.023142857142857184,4.480267857142857],[0.014866285714285742,4.581668571428572],[0.008393142857142873,4.684337857142857],[0.003744000000000007,4.788279999999999],[0.0009394285714285732,4.893499285714285],[0,5]];
function _v1() = [[0,5],[0.02314285714285715,5.555982142857142],[0.09085714285714289,6.147857142857143],[0.20057142857142857,6.768660714285714],[0.34971428571428576,7.411428571428573],[0.5357142857142857,8.069196428571429],[0.756,8.734999999999998],[1.0079999999999998,9.401874999999999],[1.2891428571428576,10.062857142857144],[1.5968571428571432,10.710982142857144],[1.9285714285714286,11.339285714285715],[2.281714285714286,11.940803571428571],[2.653714285714286,12.508571428571429],[3.0420000000000003,13.035625],[3.443999999999999,13.514999999999997],[3.857142857142857,13.939732142857142],[4.278857142857143,14.302857142857142],[4.7065714285714275,14.597410714285713],[5.137714285714286,14.816428571428574],[5.569714285714285,14.95294642857143],[6,15],[6.430285714285714,14.952946428571428],[6.862285714285714,14.816428571428574],[7.293428571428571,14.597410714285713],[7.721142857142859,14.302857142857146],[8.142857142857142,13.939732142857142],[8.556,13.514999999999999],[8.958,13.035625],[9.346285714285717,12.508571428571429],[9.718285714285717,11.940803571428573],[10.071428571428571,11.339285714285715],[10.403142857142857,10.710982142857143],[10.710857142857144,10.062857142857144],[10.992,9.401874999999999],[11.244,8.735],[11.464285714285715,8.069196428571429],[11.650285714285715,7.411428571428571],[11.799428571428571,6.768660714285714],[11.909142857142857,6.147857142857143],[11.976857142857144,5.555982142857143],[12,5],[11.976857142857142,4.480267857142857],[11.909142857142859,3.9921428571428574],[11.79942857142857,3.5350892857142853],[11.650285714285717,3.108571428571429],[11.464285714285715,2.712053571428571],[11.243999999999998,2.3449999999999993],[10.991999999999999,2.0068750000000004],[10.710857142857144,1.697142857142857],[10.403142857142859,1.4152678571428574],[10.071428571428571,1.1607142857142856],[9.718285714285715,0.9329464285714282],[9.346285714285713,0.7314285714285715],[8.958,0.5556249999999998],[8.556000000000001,0.4050000000000001],[8.142857142857142,0.2790178571428571],[7.7211428571428575,0.17714285714285702],[7.293428571428571,0.09883928571428571],[6.862285714285715,0.04357142857142854],[6.430285714285715,0.010803571428571445],[6,0],[5.569714285714285,0.010803571428571428],[5.137714285714287,0.04357142857142858],[4.7065714285714275,0.0988392857142857],[4.278857142857144,0.17714285714285716],[3.857142857142857,0.2790178571428571],[3.443999999999999,0.40499999999999997],[3.0420000000000003,0.5556249999999998],[2.653714285714286,0.7314285714285715],[2.281714285714286,0.9329464285714286],[1.9285714285714286,1.1607142857142856],[1.5968571428571425,1.4152678571428572],[1.2891428571428576,1.697142857142857],[1.0079999999999998,2.0068750000000004],[0.7560000000000001,2.3449999999999993],[0.5357142857142857,2.712053571428571],[0.3497142857142856,3.108571428571429],[0.20057142857142865,3.5350892857142853],[0.0908571428571428,3.9921428571428574],[0.023142857142857184,4.480267857142857],[0,5]];
function _v2() = $preview?_v1():_v0();
module _v3() { polygon(points=_v2()); }

_v3();
