rsolid/src/snapshots/rsolid__path__tests__cubic_test.snap
---
source: rsolid/src/path.rs
expression: scad
---
function _v0() = [[0,5],[0.000005000000000000001,4.9970944],[0.00004000000000000001,4.994395199999999],[0.000135,4.9919288],[0.0003200000000000001,4.989721599999999],[0.0006250000000000001,4.987799999999999],[0.00108,4.986190399999999],[0.0017150000000000004,4.984919199999999],[0.0025600000000000006,4.9840127999999995],[0.003645,4.983497600000001],[0.005000000000000001,4.9834000000000005],[0.0066549999999999995,4.9837464],[0.00864,4.9845632],[0.010985000000000002,4.985876800000001],[0.013720000000000003,4.9877136],[0.016875,4.9901],[0.020480000000000005,4.9930623999999995],[0.024565000000000007,4.9966272],[0.02916,5.0008208000000005],[0.034295000000000006,5.005669600000002],[0.04000000000000001,5.011200000000001],[0.04630499999999999,5.0174384000000005],[0.053239999999999996,5.0244112],[0.060835,5.0321448],[0.06912,5.0406656],[0.078125,5.05],[0.08788000000000001,5.0601744],[0.09841500000000002,5.0712152],[0.10976000000000002,5.0831488],[0.12194499999999998,5.0960016],[0.135,5.1098],[0.148955,5.1245704],[0.16384000000000004,5.1403392],[0.179685,5.157132799999999],[0.19652000000000006,5.174977599999999],[0.21437499999999995,5.1939],[0.23328,5.213926400000001],[0.25326499999999996,5.235083199999999],[0.27436000000000005,5.2573968],[0.296595,5.2808936],[0.32000000000000006,5.3056],[0.34460499999999994,5.331542400000001],[0.37043999999999994,5.358747200000001],[0.39753499999999997,5.387240800000001],[0.42591999999999997,5.417049600000001],[0.45562500000000006,5.448200000000001],[0.48668,5.480718400000001],[0.5191149999999999,5.514631199999999],[0.55296,5.549964800000001],[0.5882449999999999,5.5867456],[0.625,5.625],[0.6632549999999999,5.6647544000000005],[0.7030400000000001,5.7060352000000005],[0.7443850000000002,5.7488688],[0.7873200000000001,5.7932816],[0.8318750000000003,5.8393],[0.8780800000000002,5.8869504],[0.9259649999999998,5.936259199999999],[0.9755599999999999,5.9872528],[1.026895,6.039957599999999],[1.08,6.0944],[1.1349049999999998,6.150606399999999],[1.19164,6.208603200000001],[1.250235,6.268416800000001],[1.3107200000000003,6.3300736],[1.3731250000000004,6.393600000000001],[1.43748,6.4590224],[1.5038150000000003,6.526367200000001],[1.5721600000000004,6.595660800000001],[1.6425449999999997,6.6669296],[1.7149999999999996,6.7402],[1.789555,6.815498400000001],[1.86624,6.8928512],[1.9450849999999997,6.972284799999999],[2.0261199999999997,7.0538256],[2.109375,7.137499999999999],[2.1948800000000004,7.223334400000001],[2.282665,7.3113551999999995],[2.37276,7.4015888],[2.4651950000000005,7.4940616],[2.5600000000000005,7.588800000000001],[2.6572050000000007,7.6858304],[2.7568399999999995,7.785179199999999],[2.858935,7.8868728],[2.9635199999999995,7.990937599999999],[3.0706249999999997,8.0974],[3.1802799999999998,8.2062864],[3.2925150000000003,8.3176232],[3.4073599999999997,8.4314368],[3.5248450000000005,8.5477536],[3.6450000000000005,8.6666],[3.7678550000000004,8.7880024],[3.89344,8.911987199999999],[4.021785,9.0385808],[4.152919999999999,9.167809599999998],[4.286874999999999,9.2997],[4.42368,9.4342784],[4.563365,9.571571200000001],[4.705959999999999,9.711604799999998],[4.851495,9.8544056],[5,10],[4.9970944,9.999994999999998],[4.994395199999999,9.99996],[4.9919288,9.999865],[4.989721599999999,9.99968],[4.987799999999999,9.999374999999997],[4.986190399999999,9.998919999999998],[4.984919199999999,9.998285000000001],[4.9840127999999995,9.997440000000001],[4.983497600000001,9.996355000000001],[4.9834000000000005,9.995000000000001],[4.9837464,9.993345000000001],[4.9845632,9.991359999999998],[4.985876800000001,9.989015000000002],[4.9877136,9.986279999999999],[4.9901,9.983125],[4.9930623999999995,9.979519999999997],[4.9966272,9.975435],[5.0008208000000005,9.97084],[5.005669600000002,9.965705000000003],[5.011200000000001,9.96],[5.0174384000000005,9.953695000000002],[5.0244112,9.946760000000001],[5.0321448,9.939165000000001],[5.0406656,9.930880000000002],[5.05,9.921875],[5.0601744,9.91212],[5.0712152,9.901584999999999],[5.0831488,9.89024],[5.0960016,9.878055],[5.1098,9.864999999999998],[5.1245704,9.851045],[5.1403392,9.83616],[5.157132799999999,9.820314999999997],[5.174977599999999,9.803479999999999],[5.1939,9.785625000000001],[5.213926400000001,9.766720000000001],[5.235083199999999,9.746735000000001],[5.2573968,9.72564],[5.2808936,9.703405],[5.3056,9.680000000000001],[5.331542400000001,9.655395],[5.358747200000001,9.629560000000001],[5.387240800000001,9.602465],[5.417049600000001,9.57408],[5.448200000000001,9.544375],[5.480718400000001,9.513320000000002],[5.514631199999999,9.480885],[5.549964800000001,9.44704],[5.5867456,9.411755],[5.625,9.375],[5.6647544000000005,9.336745],[5.7060352000000005,9.29696],[5.7488688,9.255614999999999],[5.7932816,9.21268],[5.8393,9.168125],[5.8869504,9.12192],[5.936259199999999,9.074035],[5.9872528,9.02444],[6.039957599999999,8.973105],[6.0944,8.92],[6.150606399999999,8.865095],[6.208603200000001,8.80836],[6.268416800000001,8.749765],[6.3300736,8.68928],[6.393600000000001,8.626875],[6.4590224,8.562520000000001],[6.526367200000001,8.496185],[6.595660800000001,8.42784],[6.6669296,8.357455000000002],[6.7402,8.285],[6.815498400000001,8.210445],[6.8928512,8.13376],[6.972284799999999,8.054915000000001],[7.0538256,7.97388],[7.137499999999999,7.890625],[7.223334400000001,7.80512],[7.3113551999999995,7.717335],[7.4015888,7.6272400000000005],[7.4940616,7.534805],[7.588800000000001,7.4399999999999995],[7.6858304,7.342795000000001],[7.785179199999999,7.2431600000000005],[7.8868728,7.141065000000001],[7.990937599999999,7.036479999999999],[8.0974,6.929375],[8.2062864,6.81972],[8.3176232,6.707485],[8.4314368,6.592639999999999],[8.5477536,6.475154999999999],[8.6666,6.355],[8.7880024,6.232144999999999],[8.911987199999999,6.106559999999998],[9.0385808,5.978214999999999],[9.167809599999998,5.84708],[9.2997,5.713125000000001],[9.4342784,5.576320000000001],[9.571571200000001,5.436635000000001],[9.711604799999998,5.29404],[9.8544056,5.148505],[10,5],[9.999994999999998,5.0029056],[9.99996,5.0056047999999995],[9.999865,5.0080712],[9.99968,5.0102784],[9.999374999999997,5.012199999999999],[9.998919999999998,5.013809599999999],[9.998285000000001,5.015080799999999],[9.997440000000001,5.0159872000000005],[9.996355000000001,5.0165024],[9.995000000000001,5.0166],[9.993345000000001,5.016253600000001],[9.991359999999998,5.0154368],[9.989015000000002,5.0141232],[9.986279999999999,5.0122864],[9.983125,5.009899999999999],[9.979519999999997,5.0069376],[9.975435,5.003372799999999],[9.97084,4.9991792],[9.965705000000003,4.994330400000001],[9.96,4.988800000000001],[9.953695000000002,4.9825616],[9.946760000000001,4.9755888],[9.939165000000001,4.9678552],[9.930880000000002,4.9593344],[9.921875,4.95],[9.91212,4.9398256],[9.901584999999999,4.9287848],[9.89024,4.9168512],[9.878055,4.9039984],[9.864999999999998,4.890199999999999],[9.851045,4.875429599999999],[9.83616,4.8596607999999994],[9.820314999999997,4.842867199999999],[9.803479999999999,4.825022399999999],[9.785625000000001,4.806100000000001],[9.766720000000001,4.7860736],[9.746735000000001,4.7649168],[9.72564,4.7426032000000005],[9.703405,4.719106399999999],[9.680000000000001,4.6944],[9.655395,4.668457600000001],[9.629560000000001,4.6412528],[9.602465,4.612759200000001],[9.57408,4.5829504000000005],[9.544375,4.551800000000001],[9.513320000000002,4.519281600000001],[9.480885,4.485368800000001],[9.44704,4.4500352],[9.411755,4.4132544],[9.375,4.375],[9.336745,4.3352456],[9.29696,4.2939648],[9.255614999999999,4.2511312],[9.21268,4.2067184],[9.168125,4.1607],[9.12192,4.1130496],[9.074035,4.0637408],[9.02444,4.012747200000001],[8.973105,3.9600424],[8.92,3.9056000000000006],[8.865095,3.8493936],[8.80836,3.7913968000000002],[8.749765,3.7315832],[8.68928,3.6699264],[8.626875,3.6064],[8.562520000000001,3.5409775999999997],[8.496185,3.4736328],[8.42784,3.4043392],[8.357455000000002,3.3330704000000004],[8.285,3.2598000000000003],[8.210445,3.184501600000001],[8.13376,3.1071488],[8.054915000000001,3.0277152],[7.97388,2.9461744000000003],[7.890625,2.8625000000000003],[7.80512,2.7766656],[7.717335,2.6886447999999996],[7.6272400000000005,2.5984112],[7.534805,2.5059384000000002],[7.4399999999999995,2.4112],[7.342795000000001,2.3141695999999996],[7.2431600000000005,2.2148208000000005],[7.141065000000001,2.1131272000000005],[7.036479999999999,2.0090624000000004],[6.929375,1.9026000000000003],[6.81972,1.7937136000000002],[6.707485,1.6823768000000001],[6.592639999999999,1.5685632],[6.475154999999999,1.4522463999999997],[6.355,1.3333999999999997],[6.232144999999999,1.2119975999999997],[6.106559999999998,1.0880127999999996],[5.978214999999999,0.9614191999999995],[5.84708,0.8321904000000008],[5.713125000000001,0.7003000000000007],[5.576320000000001,0.5657216000000006],[5.436635000000001,0.4284288000000004],[5.29404,0.2883952000000003],[5.148505,0.14559440000000012],[5,0],[5.0029056,0.000005000000000000001],[5.0056047999999995,0.00004000000000000001],[5.0080712,0.000135],[5.0102784,0.0003200000000000001],[5.012199999999999,0.0006250000000000001],[5.013809599999999,0.00108],[5.015080799999999,0.0017150000000000004],[5.0159872000000005,0.0025600000000000006],[5.0165024,0.003645],[5.0166,0.005000000000000001],[5.016253600000001,0.0066549999999999995],[5.0154368,0.00864],[5.0141232,0.010985000000000002],[5.0122864,0.013720000000000003],[5.009899999999999,0.016875],[5.0069376,0.020480000000000005],[5.003372799999999,0.024565000000000007],[4.9991792,0.02916],[4.994330400000001,0.034295000000000006],[4.988800000000001,0.04000000000000001],[4.9825616,0.04630499999999999],[4.9755888,0.053239999999999996],[4.9678552,0.060835],[4.9593344,0.06912],[4.95,0.078125],[4.9398256,0.08788000000000001],[4.9287848,0.09841500000000002],[4.9168512,0.10976000000000002],[4.9039984,0.12194499999999998],[4.890199999999999,0.135],[4.875429599999999,0.148955],[4.8596607999999994,0.16384000000000004],[4.842867199999999,0.179685],[4.825022399999999,0.19652000000000006],[4.806100000000001,0.21437499999999995],[4.7860736,0.23328],[4.7649168,0.25326499999999996],[4.7426032000000005,0.27436000000000005],[4.719106399999999,0.296595],[4.6944,0.32000000000000006],[4.668457600000001,0.34460499999999994],[4.6412528,0.37043999999999994],[4.612759200000001,0.39753499999999997],[4.5829504000000005,0.42591999999999997],[4.551800000000001,0.45562500000000006],[4.519281600000001,0.48668],[4.485368800000001,0.5191149999999999],[4.4500352,0.55296],[4.4132544,0.5882449999999999],[4.375,0.625],[4.3352456,0.6632549999999999],[4.2939648,0.7030400000000001],[4.2511312,0.7443850000000002],[4.2067184,0.7873200000000001],[4.1607,0.8318750000000003],[4.1130496,0.8780800000000002],[4.0637408,0.9259649999999998],[4.012747200000001,0.9755599999999999],[3.9600424,1.026895],[3.9056000000000006,1.08],[3.8493936,1.1349049999999998],[3.7913968000000002,1.19164],[3.7315832,1.250235],[3.6699264,1.3107200000000003],[3.6064,1.3731250000000004],[3.5409775999999997,1.43748],[3.4736328,1.5038150000000003],[3.4043392,1.5721600000000004],[3.3330704000000004,1.6425449999999997],[3.2598000000000003,1.7149999999999996],[3.184501600000001,1.789555],[3.1071488,1.86624],[3.0277152,1.9450849999999997],[2.9461744000000003,2.0261199999999997],[2.8625000000000003,2.109375],[2.7766656,2.1948800000000004],[2.6886447999999996,2.282665],[2.5984112,2.37276],[2.5059384000000002,2.4651950000000005],[2.4112,2.5600000000000005],[2.3141695999999996,2.6572050000000007],[2.2148208000000005,2.7568399999999995],[2.1131272000000005,2.858935],[2.0090624000000004,2.9635199999999995],[1.9026000000000003,3.0706249999999997],[1.7937136000000002,3.1802799999999998],[1.6823768000000001,3.2925150000000003],[1.5685632,3.4073599999999997],[1.4522463999999997,3.5248450000000005],[1.3333999999999997,3.6450000000000005],[1.2119975999999997,3.7678550000000004],[1.0880127999999996,3.89344],[0.9614191999999995,4.021785],[0.8321904000000008,4.152919999999999],[0.7003000000000007,4.286874999999999],[0.5657216000000006,4.42368],[0.4284288000000004,4.563365],[0.2883952000000003,4.705959999999999],[0.14559440000000012,4.851495],[0,5]];
function _v1() = [[0,5],[0.0006250000000000001,4.987799999999999],[0.005000000000000001,4.9834000000000005],[0.016875,4.9901],[0.04000000000000001,5.011200000000001],[0.078125,5.05],[0.135,5.1098],[0.21437499999999995,5.1939],[0.32000000000000006,5.3056],[0.45562500000000006,5.448200000000001],[0.625,5.625],[0.8318750000000003,5.8393],[1.08,6.0944],[1.3731250000000004,6.393600000000001],[1.7149999999999996,6.7402],[2.109375,7.137499999999999],[2.5600000000000005,7.588800000000001],[3.0706249999999997,8.0974],[3.6450000000000005,8.6666],[4.286874999999999,9.2997],[5,10],[4.987799999999999,9.999374999999997],[4.9834000000000005,9.995000000000001],[4.9901,9.983125],[5.011200000000001,9.96],[5.05,9.921875],[5.1098,9.864999999999998],[5.1939,9.785625000000001],[5.3056,9.680000000000001],[5.448200000000001,9.544375],[5.625,9.375],[5.8393,9.168125],[6.0944,8.92],[6.393600000000001,8.626875],[6.7402,8.285],[7.137499999999999,7.890625],[7.588800000000001,7.4399999999999995],[8.0974,6.929375],[8.6666,6.355],[9.2997,5.713125000000001],[10,5],[9.999374999999997,5.012199999999999],[9.995000000000001,5.0166],[9.983125,5.009899999999999],[9.96,4.988800000000001],[9.921875,4.95],[9.864999999999998,4.890199999999999],[9.785625000000001,4.806100000000001],[9.680000000000001,4.6944],[9.544375,4.551800000000001],[9.375,4.375],[9.168125,4.1607],[8.92,3.9056000000000006],[8.626875,3.6064],[8.285,3.2598000000000003],[7.890625,2.8625000000000003],[7.4399999999999995,2.4112],[6.929375,1.9026000000000003],[6.355,1.3333999999999997],[5.713125000000001,0.7003000000000007],[5,0],[5.012199999999999,0.0006250000000000001],[5.0166,0.005000000000000001],[5.009899999999999,0.016875],[4.988800000000001,0.04000000000000001],[4.95,0.078125],[4.890199999999999,0.135],[4.806100000000001,0.21437499999999995],[4.6944,0.32000000000000006],[4.551800000000001,0.45562500000000006],[4.375,0.625],[4.1607,0.8318750000000003],[3.9056000000000006,1.08],[3.6064,1.3731250000000004],[3.2598000000000003,1.7149999999999996],[2.8625000000000003,2.109375],[2.4112,2.5600000000000005],[1.9026000000000003,3.0706249999999997],[1.3333999999999997,3.6450000000000005],[0.7003000000000007,4.286874999999999],[0,5]];
function _v2() = $preview?_v1():_v0();
module _v3() { polygon(points=_v2()); }

_v3();
