rsolid/src/snapshots/rsolid__path__tests__line_segment_test.snap
---
source: rsolid/src/path.rs
expression: scad
---
function _v0() = [[-0.22360679774997896,0.4472135954999579],[9.776393202250022,5.447213595499958],[10.223606797749978,5.447213595499958],[20.22360679774998,0.4472135954999579],[19.77639320225002,0.4472135954999579],[29.77639320225002,5.447213595499958],[30.22360679774998,5.447213595499958],[40.22360679774998,0.4472135954999579]];
module _v1() { polygon(points=_v0()); }

_v1();
