rsolid/src/snapshots/rsolid__path__tests__linear_test.snap
---
source: rsolid/src/path.rs
expression: scad
---
function _v0() = [[0,0],[10,10],[20,10],[20,0],[10,0],[10,10],[0,0]];
module _v1() { polygon(points=_v0()); }

_v1();
